# UrSQL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  UrSQL.sln  UrSQL.vcxproj  UrSQL.vcxproj.filters  unix_build.sh
example/: ursql_example.sql
include/: CMakeLists.txt
include/common/: CMakeLists.txt  Error.hpp  Finally.hpp  Macros.hpp  Message.hpp  Messaging.hpp  Util.hpp
include/controller/: BasicInterpreter.hpp  CMakeLists.txt  DBManager.hpp  Interpreter.hpp  Processor.hpp  SQLInterpreter.hpp
include/controller_old/: BasicInterpreter.hpp  SQLInterpreter.hpp
include/exception/: Exception.hpp  InternalError.hpp  UserError.hpp
include/model/: Attribute.hpp  Block.hpp  BufferStream.hpp  CMakeLists.txt  DBStatement.hpp  Database.hpp  Entity.hpp  Filter.hpp  FolderReader.hpp  Keyword.hpp  Order.hpp  Row.hpp  SQLStatement.hpp  Statement.hpp  Storable.hpp  Storage.hpp  TOC.hpp  Token.hpp  Tokenizer.hpp  Value.hpp
include/model_old/: DBStatement.hpp  Database.hpp  Filter.hpp  FolderReader.hpp  Row.hpp  SQLStatement.hpp
include/parser/: Parser.hpp  SQLBlob.hpp  StatementParser.hpp  Token.hpp  TokenEnums.hpp  TokenIterator.hpp  TokenStream.hpp  Tokenizer.hpp
include/persistence/: Block.hpp  BufferStream.hpp  Storage.hpp
include/statement/: CreateTableStatement.hpp  DBStatement.hpp  DropTableStatement.hpp  ExecuteResult.hpp  Filter.hpp  InsertIntoTableStatement.hpp  SQLStatement.hpp  SelectStatement.hpp  Statement.hpp  TableStatement.hpp
include/token/: IdentifierToken.hpp  KeywordToken.hpp  NumberToken.hpp  OperatorToken.hpp  PunctuationToken.hpp  TextToken.hpp  Token.hpp  TokenIterator.hpp  Tokenizer.hpp
include/view/: CMakeLists.txt  RowsAffectedTextView.hpp  TabularView.hpp  TextView.hpp  View.hpp
src/: Attribute.cpp  Attribute.hpp  BasicProcessor.cpp  BasicProcessor.hpp  Block.cpp  Block.hpp  BufferStream.cpp  BufferStream.hpp  CMakeLists.txt  DBManager.cpp  DBManager.hpp  DBStatement.cpp  DBStatement.hpp  Database.cpp  Database.hpp  Entity.cpp  Entity.hpp  Error.cpp  Error.hpp  Errors.hpp  Filter.cpp  Filter.hpp  FolderReader.cpp  FolderReader.hpp  Interpreter.hpp  Keyword.cpp  Keyword.hpp  Order.cpp  Order.hpp  Row.cpp  Row.hpp  SQLInterpreter.cpp  SQLInterpreter.hpp  SQLStatement.cpp  SQLStatement.hpp  Statement.cpp  Statement.hpp  Storable.cpp  Storable.hpp  Storage.cpp  (+13 more)
src/common/: CMakeLists.txt  Error.cpp  Error.hpp  Macros.hpp
src/controller/: BasicInterpreter.cpp  BasicProcessor.cpp  CMakeLists.txt  DBManager.cpp  Interpreter.hpp  Processor.cpp  SQLInterpreter.cpp  SQLInterpreter.hpp
src/controller_old/: CMakeLists.txt  DBManager.cpp  Processor.cpp  SQLInterpreter.cpp
src/exception/: Exception.cpp  InternalError.cpp  UserError.cpp
src/model/: Attribute.cpp  Block.cpp  Block.hpp  BufferStream.cpp  BufferStream.hpp  CMakeLists.txt  DBStatement.cpp  DBStatement.hpp  Database.cpp  Entity.cpp  Filter.cpp  FolderReader.cpp  FolderReader.hpp  Keyword.cpp  Order.cpp  Order.hpp  Row.cpp  SQLStatement.cpp  Statement.cpp  Statement.hpp  Storable.cpp  Storable.hpp  Storage.cpp  Storage.hpp  TOC.cpp  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  Value.cpp  Value.hpp
src/model_old/: Filter.cpp  Row.cpp  SQLStatement.cpp
src/parser/: Parser.cpp  SQLBlob.cpp  StatementParser.cpp  Token.cpp  TokenEnums.cpp  TokenIterator.cpp  TokenStream.cpp  Tokenizer.cpp
src/persistence/: Block.cpp  BufferStream.cpp  Storage.cpp
src/statement/: CreateTableStatement.cpp  DBStatement.cpp  DropTableStatement.cpp  ExecuteResult.cpp  Filter.cpp  InsertIntoTableStatement.cpp  SQLStatement.cpp  SelectStatement.cpp  Statement.cpp  TableStatement.cpp
src/token/: IdentifierToken.cpp  KeywordToken.cpp  NumberToken.cpp  OperatorToken.cpp  PunctuationToken.cpp  TextToken.cpp  Token.cpp  Tokenizer.cpp
src/view/: CMakeLists.txt  RowsAffectedTextView.cpp  TabularView.cpp  TextView.cpp  View.cpp  View.hpp
src/view_old/: CMakeLists.txt  View.cpp
test/: CMakeLists.txt  UrSQLTest.cpp
test/model/: ValueTest.hpp
test/parser/: TokenIteratorTest.hpp  TokenStreamTest.hpp  TokenTest.hpp
